chore: more native image hints