@@ -8,7 +8,6 @@ import lombok.experimental.Accessors;
 
 import java.io.Serial;
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -59,9 +58,9 @@ public class SamlIdPLogoutProperties implements Serializable {
     private boolean singleLogoutCallbacksDisabled;
 
     /**
-     * The order in which the logout request binginds should be tried (if available at the SP level).
+     * The order in which the logout request bindings should be tried (if available at the SP level).
      */
-    private List<String> logoutRequestBindings = Arrays.asList(
+    private List<String> logoutRequestBindings = List.of(
         "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
         "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
         "urn:oasis:names:tc:SAML:2.0:bindings:SOAP"
